# sliding-puzzle-sat

./: CHANGELOG.md  README.md  abgabe.md  sat-game.cabal
app/: Main.hs
src/: Formula.hs
