cabal-version:      2.4
name:               sat-game
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Formula

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, text > 2, text-builder, transformers, typed-process, bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        GADTs
        ScopedTypeVariables
        GeneralizedNewtypeDeriving
        LambdaCase
        TupleSections

executable sat-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        sat-game,
        text

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        GADTs
        ScopedTypeVariables
        GeneralizedNewtypeDeriving
        LambdaCase
        TupleSections
        